--- a/angular/apps/taskmaster/src/app/components/project/progress-bar/progress-bar.component.html
+++ b/angular/apps/taskmaster/src/app/components/project/progress-bar/progress-bar.component.html
@@ -1,1 +1,9 @@
-<p>progress-bar works!</p>
+<div>
+  <div>
+    <span>Progress</span>
+    <span>75%</span>
+  </div>
+  <div>
+    <div></div>
+  </div>
+</div>
