--- a/angular/apps/taskmaster/src/app/components/project/project-title/project-title.component.html
+++ b/angular/apps/taskmaster/src/app/components/project/project-title/project-title.component.html
@@ -1,1 +1,7 @@
-<p>project-title works!</p>
+<div>
+  <h1>Project Name</h1>
+  <p>
+    This is a brief description of the project, providing an overview of the
+    goals and objectives.
+  </p>
+</div>
