--- a/angular/apps/taskmaster/src/app/components/project/project.component.html
+++ b/angular/apps/taskmaster/src/app/components/project/project.component.html
@@ -1,1 +1,5 @@
-<p>project works!</p>
+<div>
+  <app-project-title></app-project-title>
+  <app-task-list></app-task-list>
+  <app-progress-bar></app-progress-bar>
+</div>
