--- a/angular/apps/taskmaster/src/app/components/project/task-list/task-list.component.html
+++ b/angular/apps/taskmaster/src/app/components/project/task-list/task-list.component.html
@@ -1,1 +1,49 @@
-<p>task-list works!</p>
+<div>
+  <div>
+    <h3>Tasks</h3>
+    <div>In Progress Completed</div>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        Task
+      </tr>
+      <tr>
+        Status
+      </tr>
+      <tr>
+        Due Date
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <label>
+            <input type="checkbox" aria-label="Select task" /> Design wireframe
+          </label>
+        </td>
+        <td>In Progress</td>
+        <td>2024-10-01</td>
+      </tr>
+      <tr>
+        <td>
+          <label>
+            <input type="checkbox" aria-label="Select task" checked /> Develop
+            frontend
+          </label>
+        </td>
+        <td>In Progress</td>
+        <td>2024-10-01</td>
+      </tr>
+      <tr>
+        <td>
+          <label>
+            <input type="checkbox" aria-label="Select task" /> Develop backend
+          </label>
+        </td>
+        <td>In Progress</td>
+        <td>2024-11-01</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
