--- a/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
@@ -36,6 +36,7 @@
           >
         </td>
         <td class="due-date">{{ task.dueDate | date : 'YYYY-MM-dd' }}</td>
+        <td (click)="deleteTask(task.id)">x</td>
       </tr>
       }
     </tbody>
