--- a/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
@@ -42,6 +42,10 @@
     </tbody>
   </table>
   <div class="button-container">
-    <button>Add New Task</button>
+    <button (click)="showModal = true">Add New Task</button>
   </div>
+
+  @if(showModal) {
+  <app-task-form (closePanel)="showModal = false"></app-task-form>
+  }
 </div>
