--- a/front-end/apps/taskmaster-angular/src/app/components/project/task-form/task-form.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/components/project/task-form/task-form.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <div class="modal-content">
     <form [formGroup]="taskForm" (ngSubmit)="handleSubmit()">
-      <p>Add new task</p>
+      <p>{{ title }}</p>
       <div>
         <label for="task-name">Task name</label>
         <input id="task-name" formControlName="name" />
@@ -21,7 +21,9 @@
         }
       </div>
       <div>
-        <button class="cancel-button" type="button">Cancel</button>
+        <button class="cancel-button" type="button" (click)="handleCancel()">
+          Cancel
+        </button>
         <button
           class="submit-button"
           type="submit"
