--- a/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
@@ -36,7 +36,8 @@
           >
         </td>
         <td class="due-date">{{ task.dueDate | date : 'YYYY-MM-dd' }}</td>
-        <td (click)="deleteTask(task.id)">x</td>
+        <td (click)="updateTask(task)">✏️</td>
+        <td (click)="deleteTask(task.id)">❌</td>
       </tr>
       }
     </tbody>
@@ -46,6 +47,10 @@
   </div>
 
   @if(showModal) {
-  <app-task-form (closePanel)="showModal = false"></app-task-form>
+  <app-task-form
+    [taskCurrent]="taskSelected"
+    [formType]="formType"
+    (closePanel)="showModal = false"
+  ></app-task-form>
   }
 </div>
