--- a/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.html
@@ -12,10 +12,12 @@
         <th>Task</th>
         <th>Status</th>
         <th>Due Date</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-      @for (task of tasks; track task.id) {
+      @for (task of tasks$ | async; track task.id) {
       <tr>
         <td>
           <label [class.completed-task]="task.completed">
@@ -23,7 +25,7 @@
               type="checkbox"
               aria-label="Select task"
               [checked]="task.completed"
-              (click)="handleCheckbox(task.id)"
+              (click)="handleCheckbox(task)"
             />
             {{ task.name }}
           </label>
@@ -50,7 +52,7 @@
   <app-task-form
     [taskCurrent]="taskSelected"
     [formType]="formType"
-    (closePanel)="showModal = false"
+    (closePanel)="handleModalClose($event)"
   ></app-task-form>
   }
 </div>
