--- a/front-end/apps/taskmaster-angular/src/app/app.component.html
+++ b/front-end/apps/taskmaster-angular/src/app/app.component.html
@@ -1,1 +1,22 @@
-<router-outlet></router-outlet>
+<nav>
+  <p>Taskmaster</p>
+
+  <ul>
+    @if(auth.isLoggedIn()) {
+    <li>
+      <a (click)="logout()" class="nav-link">Logout</a>
+    </li>
+    }
+
+    <li>
+      <a routerLink="register" class="nav-link">Register</a>
+    </li>
+    <li>
+      <a routerLink="login" class="nav-link">Login</a>
+    </li>
+  </ul>
+</nav>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
