--- a/frontend/apps/taskmaster-angular/src/app/components/project/project.component.html
+++ b/frontend/apps/taskmaster-angular/src/app/components/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="project-container">
   <app-project-title></app-project-title>
-  <app-task-list></app-task-list>
-  <app-progress-bar></app-progress-bar>
+  <app-task-list (completed)="completedChanged($event)"></app-task-list>
+  <app-progress-bar [percent]="completed"></app-progress-bar>
 </div>
