--- a/frontend/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.scss
+++ b/frontend/apps/taskmaster-angular/src/app/components/project/task-list/task-list.component.scss
@@ -58,21 +58,30 @@
     }
 
     .status-dot {
-      height: 10px;
-      width: 10px;
-      background-color: #333;
-      border-radius: 50%;
       display: inline-block;
-      margin-right: 5px;
+      margin-right: 0.75rem;
       vertical-align: middle;
-    }
 
-    .status-dot.completed {
-      background-color: #ccc;
-    }
+      &:before {
+        content: '';
+        display: block;
+        height: 10px;
+        width: 10px;
+        background-color: #333;
+        border-radius: 50%;
+      }
 
-    .status-dot.in-progress {
-      background-color: #333;
+      &.completed {
+        &:before {
+          background-color: #ccc;
+        }
+      }
+
+      &.in-progress {
+        &:before {
+          background-color: #333;
+        }
+      }
     }
 
     td.due-date {
