--- a/apps/fantasia-angular/src/app/pages/art/art.page.scss
+++ b/apps/fantasia-angular/src/app/pages/art/art.page.scss
@@ -6,8 +6,7 @@
   top: 0;
   left: 0;
 
-  background: url(/assets/images/starcraft/background.jpg) no-repeat center 0
-    #00041a;
+  background: url(/images/starcraft/background.jpg) no-repeat center 0 #00041a;
   background-size: 100% auto;
   overflow: hidden;
 }
