--- a/apps/fantasia-angular/src/styles/app-variables.scss
+++ b/apps/fantasia-angular/src/styles/app-variables.scss
@@ -1,17 +1,22 @@
+@forward 'blueprint/variables';
 @use '@angular/material' as mat;
-@import 'blueprint/variables';
 
 // Material Theme
-$app-color-primary: mat.define-palette(mat.$indigo-palette);
-$app-color-accent: mat.define-palette(mat.$yellow-palette, A200, A100, A400);
-$app-color-warn: mat.define-palette(mat.$red-palette);
-$app-color-theme: mat.define-light-theme(
+$app-color-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$app-color-accent: mat.m2-define-palette(
+  mat.$m2-yellow-palette,
+  A200,
+  A100,
+  A400
+);
+$app-color-warn: mat.m2-define-palette(mat.$m2-red-palette);
+$app-color-theme: mat.m2-define-light-theme(
   $app-color-primary,
   $app-color-accent,
   $app-color-warn
 );
 
 $app-font-lobster-name: 'Lobster';
-$app-font-lobster-path-regular: '~assets/fonts/lobster/Lobster-Regular.ttf';
+$app-font-lobster-path-regular: '/fonts/lobster/Lobster-Regular.ttf';
 
 $app-color-white: #ffffff;
