--- a/apps/fantasia-angular/src/app/components/logo/logo.component.html
+++ b/apps/fantasia-angular/src/app/components/logo/logo.component.html
@@ -1,1 +1,3 @@
-<div class="cpt-container" fxLayout="row" fxLayoutAlign="center center">AD</div>
+<div class="cpt-container tw-flex-row tw-justify-center tw-content-center">
+  AD
+</div>
