--- a/apps/fantasia-angular/src/app/components/menu/menu.component.html
+++ b/apps/fantasia-angular/src/app/components/menu/menu.component.html
@@ -1,15 +1,14 @@
 <app-logo (click)="home()"></app-logo>
-<div class="cpt-header--container" fxLayout="row" fxLayoutAlign="center">
+<div class="cpt-header--container tw-flex-row tw-justify-center">
   <h1 class="cpt-header">Andre Davcev</h1>
 </div>
 
 @if (breakpoint$ | async) {
 <div
-  class="cpt-grid-apps cpt-columns-{{ columns$ | async }}"
-  fxLayout="row"
-  [fxLayoutAlign]="alignGrid$ | async"
+  class="cpt-grid-apps cpt-columns-{{ columns$ | async }} tw-flex-row"
+  [class]="alignGrid$ | async"
 >
-  <section fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="2rem">
+  <section class="tw-flex-column tw-justify-start tw-content-center tw-gap-8">
     <mat-grid-list
       [ngClass]="gridClass$ | async"
       [cols]="columns$ | async"
