Finish stylize of home

--- a/apps/fantasia-angular/src/app/components/logo/logo.component.html
+++ b/apps/fantasia-angular/src/app/components/logo/logo.component.html
@@ -1,3 +1,5 @@
-<div class="cpt-container tw-flex-row tw-justify-center tw-content-center">
+<div
+  class="cpt-container tw-flex tw-flex-row tw-justify-center tw-items-center"
+>
   AD
 </div>
